fix(footer): reduce font size of home copy to improve readability

--- a/src/app/shared/component/footer/footer.component.scss
+++ b/src/app/shared/component/footer/footer.component.scss
@@ -53,7 +53,7 @@ footer {
 
     .home-copy {
       text-align: center;
-      font-size: 0.8em
+      font-size: 0.6em
     }
   }
 }
